# ANTARES

./: README.md
antares/: Cargo.toml  README.md
antares-python/: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  main.py  pyproject.toml  template.env
antares-python/src/antares/: cli.py  config.py  logger.py
antares-python/src/antares/client/: __init__.py  rest.py  tcp.py
antares-python/tests/: conftest.py  test_cli.py
antares-python/tests/client/: test_client.py  test_rest.py  test_tcp.py
antares-python/tests/models/: test_ship.py
antares-web/: README.md  config.example.toml  index.html  package.json  tailwind.config.ts  template.env
antares/assets/: config.toml
antares/src/: config.rs  controller.rs  lib.rs  main.rs
antares/src/radar/: config.rs  mod.rs  radar.rs
antares/src/radar/broadcaster/: broadcaster.rs  mod.rs  tcp.rs  websocket.rs
antares/src/radar/detector/: detector.rs
antares/src/radar/protocol/: mod.rs
antares/src/radar/protocol/constants/: mod.rs  server_command.rs
antares/src/radar/protocol/tcp_interfaces/: base_track_interface.rs  track_control_interface.rs  track_data_interface.rs
antares/src/radar/tracker/: mod.rs  track.rs  tracker.rs
antares/src/simulation/: config.rs  mod.rs  simulation.rs
antares/src/simulation/emitters/: emitter.rs  mod.rs  ship.rs
antares/src/simulation/environment/: wave.rs
antares/src/simulation/movement/: line.rs  random.rs  stationary.rs  strategy.rs
antares/src/utils/: escape_ascii.rs  mod.rs  thread_pool.rs
docs/: _config.yml  antares-cli.md  antares-python.md  antares-simulator.md  antares-web.md  index.markdown  index.md
naval-radar-reverse-proxy/: README.md  package.json  server.js
naval-radar-simulator/: Cargo.toml
naval-radar-web-ui/: README.md  index.html  (+2 more)
(+42 files in other folders)
